--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img src="./images/karmalogo.jpg" alt="Karma" width = "40" height = "40">
 			<ul class="links-navigation">
 				<li class="active"> Meet Karma</li>
-				<li>How it works</li>
+				<li>How Karma works</li>
 				<li>Store</li>
 				<li>Blog</li>
 				<li>Help</li>
